[package]
name = "opendht"
version = "0.0.2"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
build = "build.rs"
edition = "2018"

[[example]]
name = "dht"

[build-dependencies]
cc = "*"

[dependencies]
libc = "*"
nix = "*"
ring = "*"
futures = "*"

[dev-dependencies]
tokio = {version = "0.1", features = ["async-await-preview"]}
